# servant-purescript-example

./: cabal.project  flake.nix
api/: example-api.cabal
api/src/: ExampleApi.hs
backend/: CHANGELOG.md  example-backend.cabal
backend/app/: Main.hs
frontend/src/: ExampleApi.purs  ExampleApiClient.purs
purescript-client-generator/: purescript-client-generator.cabal
purescript-client-generator/app/: Main.hs
