cabal-version:      3.4
name:               example-api
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  ExampleApi
    build-depends:
      , aeson
      , base
      , servant
      , text
    hs-source-dirs:   src
    default-language: Haskell2010
