cabal-version:      3.4
name:               example-backend
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Jacek Galowicz
maintainer:         jacek@galowicz.de
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable example-backend
    import:           warnings
    main-is:          Main.hs
    build-depends:    
      , base
      , example-api
      , warp
      , servant-server
    hs-source-dirs:   app
    default-language: Haskell2010
